duplicado el proyecto pero actualizado, muy mala forma de compartirlo pero bueno

--- a/PracticaGrupal_apartado2-2/PracticaGrupal_apartado2/nbproject/project.properties
+++ b/PracticaGrupal_apartado2-2/PracticaGrupal_apartado2/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=PracticaGrupal_apartado2
-main.class=practicagrupal.Main
+main.class=practicagrupal_apartado2.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
